fix the issue that I was experiencing where the page loaded with the cover misaligned

--- a/wp-content/themes/verde-beta/css/main.css
+++ b/wp-content/themes/verde-beta/css/main.css
@@ -109,6 +109,8 @@ footer a {
 
 main {
   position: absolute;
+	top: 0;
+	left: 0;
 	white-space: nowrap;
   overflow: auto;
 }
